# PokerVult-C

./: .roulette.c.swo  .roulette.c.swp  CMakeLists.txt  a.out  output.txt  people.txt  roulette.c  roulette.h
